pushed with footer update

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     
     </div>
     <footer>
-         Copyright © 2022 - All rights Reserved - Irvine Valley College
+         Copyright © 2022 - All rights Reserved - RainbowKiwi
     </footer>
 
     <script src="index.js"></script>
