--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 
 <body>
     <div class="parallax1">
-        <div>
-            <img class = "rotate" src="img/swoosh.svg" alt="swoosh">
+        <div class = "moveimg">
         </div>
         <div class="head">
             Esports Allstars
@@ -27,12 +26,9 @@
 
     </section>
 
-    <div class="parallax2">
-        <div>
-            <img class = "rotate" src="img/swoosh.svg" alt="swoosh">
+    <div class="parallax1">
+        <div class = "moveimg">
         </div>
-
-
     </div>
     <section>
         <h1 class = "edofont">FIRST EVER RANKINGS FOR THE GAME TITLE "VALORANT"</h1>
@@ -44,9 +40,9 @@
                <p id = "e" class = "notedo"> #5 PORTOLA HIGH SCHOOL </p>
             </p>
     </section>
-    <div class="parallax2">
-        <div>
-            <img class = "rotate" src="img/swoosh.svg" alt="swoosh">
+    <div class="parallax1">
+        <div class = "moveimg">
+    
         </div>
 
     </div>
@@ -57,9 +53,9 @@
         </section>
 
     </div>
-    <div class="parallax2">
-        <div>
-            <img class = "rotate" src="img/swoosh.svg" alt="swoosh">
+    <div class="parallax1">
+        <div class = "moveimg">
+       
         </div>
         <div class="head">
            apply now<br>
