--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div id = "moveimg" class = "moveimg">
        
         </div>
-        <div class="head">
+        <div id = "apply" class="head">
            apply now<br>
         </div>
     
