removed vsg logo for time being

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <div class="sponsorparallax">
        
             <div class = "sponsors" >
-                <img class = "vsg" src = "./img/VSG.png" />
+                <!-- <img class = "vsg" src = "./img/VSG.png" /> -->
                 <img class="cg" src = "./img/cg.png" />
             </div>
   
