--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     
     </div>
     <footer>
-         Copyright © 2022 - All rights Reserved - RainbowKiwi
+         Copyright © 2022 - All rights Reserved
     </footer>
 
     <script src="index.js"></script>
